k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mani-demo
  labels:
    name: mani-demo
