k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mani-demo
  namespace: mani-demo
  labels:
        run: mani-demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    run: mani-demo
  type: LoadBalancer
